--- a/HTML/Site de receitas/contato.html
+++ b/HTML/Site de receitas/contato.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Recipe</title>
+    <title>Contato</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,27 +22,32 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <main class="mainIndex">
-        <section class="texto">
-            <h2>Bem-vindo ao Fast Recipie <i class="fa-solid fa-stopwatch"></i></h2>
-            <p>Descubra receitas simples e saborosas para o seu dia a dia. Nossa missão é oferecer
-                opções acessíveis e práticas para quem deseja explorar o universo da culinária, seja no
-                café da manhã, almoço, jantar ou sobremesas incríveis.
-                Explore nosso acervo de receitas e dicas que vão transformar sua cozinha! Navegue pelas
-                opções acima e comece agora mesmo.</p>
-            <figure>
-                <img src="imagem\Logo.png" alt="Logo do site fast recipie">
-            </figure>
+    <main>
+        <section class="textoContato">
+            <div id="imagemContato">
+                <img src="imagem\Imagem_contato.jpg" alt="" >
+            </div>
+            <div id="conteudoContato">
+                <h2>Entre em Contato Conosco</h2>
+                <form action="#" method="post">
+                    <label for="nome">Nome:</label><br>
+                    <input type="text" name="" id="nome"><br>
+                    <label for="email">Email:</label><br>
+                    <input type="email" name="" id="email"><br>
+                    <label for="mensagem">Mensagem:</label><br>
+                    <textarea name="mensagem" id="mensagem"></textarea><br>
+                    <input type="submit" value="Enviar" id="enviar">
+                </form>
+            </div>
         </section>
-
     </main>
 
     <footer>
