--- a/HTML/Site de receitas/panqueca.html
+++ b/HTML/Site de receitas/panqueca.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Recipe</title>
+    <title>Panqueca</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -30,17 +30,29 @@
         </nav>
     </header>
 
-    <main class="mainIndex">
-        <section class="texto">
-            <h2>Bem-vindo ao Fast Recipie <i class="fa-solid fa-stopwatch"></i></h2>
-            <p>Descubra receitas simples e saborosas para o seu dia a dia. Nossa missão é oferecer
-                opções acessíveis e práticas para quem deseja explorar o universo da culinária, seja no
-                café da manhã, almoço, jantar ou sobremesas incríveis.
-                Explore nosso acervo de receitas e dicas que vão transformar sua cozinha! Navegue pelas
-                opções acima e comece agora mesmo.</p>
-            <figure>
-                <img src="imagem\Logo.png" alt="Logo do site fast recipie">
-            </figure>
+    <main class="mainPanqueca">
+        <section class="textoPanqueca">
+            <h2>Panqueca de Frango com Molho Branco</h2>
+            <p>Uma refeição fácil de preparar, que agrada a todos e é cheia de sabor</p>
+            <h3>Ingredientes:</h3>
+            <ul>
+                <li>1 xícara de farinha de trigo</li>
+                <li>1 ovo</li>
+                <li>1 xícara de leite</li>
+                <li>2 colheres de óleo</li>
+                <li>500g de frango desfiado</li>
+                <li>1 cebola picada</li>
+                <li>1 lata de creme de leite</li>
+                <li>2 colheres de queijo ralado</li>
+            </ul>
+            <h3>Modo de Preparo:</h3>
+            <ol>
+                <li>Bata a farinha, o ovo, o leite e o óleo no liquidificador para fazer a massa.</li>
+                <li>Em uma frigideira, faça as panquecas com a massa batida.</li>
+                <li>Recheie as panquecas com o frango desfiado e refogado com cebola.</li>
+                <li>Cubra com o molho branco feito com creme de leite e queijo ralado e sirva quente.</li>
+            </ol>
+            <img src="imagem\Imagem panqueca.jpg" alt="imagem de panquecas">
         </section>
 
     </main>
