--- a/HTML/Site de receitas/receitas.html
+++ b/HTML/Site de receitas/receitas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Recipe</title>
+    <title>Receitas</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -30,17 +30,33 @@
         </nav>
     </header>
 
-    <main class="mainIndex">
-        <section class="texto">
-            <h2>Bem-vindo ao Fast Recipie <i class="fa-solid fa-stopwatch"></i></h2>
-            <p>Descubra receitas simples e saborosas para o seu dia a dia. Nossa missão é oferecer
-                opções acessíveis e práticas para quem deseja explorar o universo da culinária, seja no
-                café da manhã, almoço, jantar ou sobremesas incríveis.
-                Explore nosso acervo de receitas e dicas que vão transformar sua cozinha! Navegue pelas
-                opções acima e comece agora mesmo.</p>
-            <figure>
-                <img src="imagem\Logo.png" alt="Logo do site fast recipie">
-            </figure>
+    <main>
+        <section class="conteiner">
+            <h2>Receitas <i class="fa-solid fa-utensils"></i></h2>
+            <section class="boxGroup">
+                <a href="bolo de chocolate.html" >
+                    <section class="box">
+                        <h3>Bolo de chocolate</h3>
+                        <img src="imagem\Bolo de chocolate.jpg" id="imgBolo">
+                    </section>
+                </a>
+
+                <a href="panqueca.html">
+                    <section class="box">
+                        <h3>Panqueca de Frango com Molho Branco</h3>
+                        <img src="imagem\Imagem panqueca.jpg">
+                    </section>
+                </a>
+
+                <a href="salada.html">
+                    <section class="box">
+                        <h3>Salada Tropical com Molho de Iogurte</h3>
+                        <img src="imagem\salada.jpg">
+                    </section>
+                </a>
+
+            </section>
+
         </section>
 
     </main>
