--- a/HTML/Site de receitas/salada.html
+++ b/HTML/Site de receitas/salada.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Recipe</title>
+    <title>Salada</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -30,17 +30,29 @@
         </nav>
     </header>
 
-    <main class="mainIndex">
-        <section class="texto">
-            <h2>Bem-vindo ao Fast Recipie <i class="fa-solid fa-stopwatch"></i></h2>
-            <p>Descubra receitas simples e saborosas para o seu dia a dia. Nossa missão é oferecer
-                opções acessíveis e práticas para quem deseja explorar o universo da culinária, seja no
-                café da manhã, almoço, jantar ou sobremesas incríveis.
-                Explore nosso acervo de receitas e dicas que vão transformar sua cozinha! Navegue pelas
-                opções acima e comece agora mesmo.</p>
-            <figure>
-                <img src="imagem\Logo.png" alt="Logo do site fast recipie">
-            </figure>
+    <main class="mainSalada">
+        <section class="textoSalada">
+            <h2>Salada Tropical com Molho de Iogurte</h2>
+            <p>Uma opção leve e refrescante, ideal para dias quentes.</p>
+            <h3>Ingredientes:</h3>
+            <ul>
+                <li>1 alface americana</li>
+                <li>1 manga cortada em tiras</li>
+                <li>1 xícara de abacaxi em cubos</li>
+                <li>1 pepino fatiado</li>
+                <li>1 cenoura ralada</li>
+                <li>1 pote de iogurte natural</li>
+                <li>Suco de 1 limão</li>
+                <li>Sal e pimenta a gosto</li>
+            </ul>
+            <h3>Modo de Preparo:</h3>
+            <ol>
+                <li>Lave e seque as folhas de alface e arrume-as em uma travessa.</li>
+                <li>Distribua as tiras de manga, os cubos de abacaxi, o pepino e a cenoura por cima da alface.</li>
+                <li>Para o molho, misture o iogurte com o suco de limão, sal e pimenta.</li>
+                <li>. Regue a salada com o molho e sirva em seguida.</li>
+            </ol>
+            <img src="imagem/salada.jpg" alt="imagem de panquecas">
         </section>
 
     </main>
