--- a/HTML/Site de receitas/bolo de chocolate.html
+++ b/HTML/Site de receitas/bolo de chocolate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast Recipe</title>
+    <title>Bolo de chocolate</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
         </figure>
         <nav>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
                 <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="receitas.html">Receitas</a></li>
                 <li><a href="contato.html">Contato</a></li>
@@ -30,17 +30,29 @@
         </nav>
     </header>
 
-    <main class="mainIndex">
-        <section class="texto">
-            <h2>Bem-vindo ao Fast Recipie <i class="fa-solid fa-stopwatch"></i></h2>
-            <p>Descubra receitas simples e saborosas para o seu dia a dia. Nossa missão é oferecer
-                opções acessíveis e práticas para quem deseja explorar o universo da culinária, seja no
-                café da manhã, almoço, jantar ou sobremesas incríveis.
-                Explore nosso acervo de receitas e dicas que vão transformar sua cozinha! Navegue pelas
-                opções acima e comece agora mesmo.</p>
-            <figure>
-                <img src="imagem\Logo.png" alt="Logo do site fast recipie">
-            </figure>
+    <main class="mainBoloDeChocolate">
+        <section class="textoReceitaBoloDeChocolate">
+            <h2>Bolo de Chocolate Simples</h2>
+            <p>Um delicioso e prático bolo de chocolate, perfeito para o café da tarde.</p>
+            <h3>Ingredientes:</h3>
+            <ul>
+                <li>2 xícaras de farinha de trigo</li>
+                <li>1 xícara de açúcar</li>
+                <li>1 xícara de chocolate em pó</li>
+                <li>1/2 xícara de óleo</li>
+                <li>3 ovos</li>
+                <li>1 colher de fermento em pó</li>
+                <li>1 xícara de leite</li>
+            </ul>
+            <h3>Modo de Preparo:</h3>
+            <ol>
+                <li>Pré-aqueça o forno a 180°C. Unte uma forma com manteiga e farinha.</li>
+                <li>Em uma tigela, misture a farinha, o açúcar e o chocolate em pó.</li>
+                <li>Adicione o óleo, os ovos e o leite, misturando bem até formar uma massa homogênea</li>
+                <li>Acrescente o fermento e misture delicadamente.</li>
+                <li>Despeje a massa na forma e leve ao forno por cerca de 35-40 minutos.</li>
+            </ol>
+            <img src="imagem\Bolo de chocolate.jpg" alt="Imagem de um bolo de chocolate">
         </section>
 
     </main>
